# super-skills-manager

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
config/: skill-sources.defaults.json
config/examples/: frontend-review.bundle.json
docs/: 01-skill-sources.md  02-mvp-ia.md  03-data-model.md  04-health-rules.md  05-tech-spike.md  06-optimization-plan.md  07-performance-analysis.md  user-guide.md
schemas/: skill-catalog.schema.json  skill-sources.schema.json
src/: App.css  App.tsx  ProjectSetup.tsx  api.ts  conflict.ts  constants.ts  errMsg.ts  skillFreshness.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bundles.rs  db.rs  discover.rs  error.rs  hashutil.rs  health.rs  indexer.rs  lib.rs  main.rs  models.rs  ops.rs  packaging.rs  policy.rs  project.rs  registry.rs  registry_compare.rs  script_risk.rs  sources.rs
src/components/: HelpTip.tsx  SkillDecisionCard.tsx
src/context/: CatalogContext.tsx
src/views/: BundlesView.tsx  HealthView.tsx  LibraryView.tsx  OpLogView.tsx  RegistryView.tsx  SettingsView.tsx  SkillsExplorerView.tsx  SourcesView.tsx
