[package]
name = "ssm-app"
version = "0.1.0"
description = "AI Skills Super Manager"
authors = ["SSM"]
edition = "2021"

[lib]
name = "ssm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
trash = "5"
glob = "0.3"
parking_lot = "0.12"
notify = "6"
notify-debouncer-mini = "0.4"
ureq = { version = "2", features = ["tls"] }
similar = "2"
zip = "2"
base64 = "0.22"
